2012-05-31  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-daemon-common.h,
	common/toolcommon/tool-daemon-common.c (daemon_sleep): New
	function.

	* bmc-watchdog/: Use new common functions.

	* ipmidetectd/ipmidetectd.c: Shutdown cleanly on signals.
	
2012-05-30  Albert Chu <chu11@llnl.gov>

	* man/, etc/: Add forgotten config entries.
	
2012-05-29  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Fix typo.

	* common/toolcommon/tool-config-file-common.c: Fix parsing for
	target-slave-address.
	
2012-05-29  Albert Chu <chu11@llnl.gov>

	* common/parsecommon/parse-common.h,
	common/parsecommon/parse-common.c (parse_get_freeipmi_outofband_flags,
	parse_get_freeipmi_outofband_2_0_flags,
	parse_get_freeipmi_inband_flags): New functions.

	* bmc-watchdog/, common/toolcommon/: Use new convenience functions
	appropriately.
	
2012-05-26  Albert Chu <chu11@llnl.gov>

	* bmc-config/, ipmi-pef-config/, ipmi-sensors-config/,
	ipmi-chassis-config/: Fix bug in which cipher suite ID input was
	not allowed.

	* man/manpage-common-sdr-options.man: Add extra info for
	sdr-cache-file option.

	* common/toolcommon/, man/: Undo split of SDR option
	"sdr-cache-directory" into separate macro/man option.

	* common/toolcommon/, man/: Split SDR option "sdr-cache-file" and
	"sdr-cache-directory" into separate macros/man files.

	* man/manpage-common-sdr-options-heading.man,
	man/manpage-common-sdr-options-file-directory.man: New files.
	Split off from man/manpage-common-sdr-options.man.

	* man/manpage-common-sdr-cache-options-heading.man,
	man/manpage-common-sdr-cache-file-directory.man,
	man/manpage-common-sdr-cache-ignore.man: New renamed files.

	* man/: Update manpages appropriately for new files.

2012-05-26  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/ipmi-pet-argp.c: Fix argp output, ipmi-pet does not
	take hostranged arguments.

	* common/toolcommon/tool-cmdline-common.h: Code cleanup.

2012-05-25  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h,