@@ -137,6 +137,7 @@ extern "C" {
  * Supermicro X8SIE
  * Supermicro X9SCA-F-O (X9SCA-F-O)
  * Supermicro H8DGU-F (H8DGU_F)
+ * Supermicro X9DRi-F (X9DRI_F)
  */
 /* achu: not official names, named based on use context */
 #define IPMI_SENSOR_TYPE_OEM_SUPERMICRO_CPU_TEMP 0xC0 
