@@ -252,7 +252,7 @@ X7SBI-LN4, Supermicro X8DTH, Supermicro X8DTG, Supermicro X8DTU,
 Supermicro X8DT3-LN4F, Supermicro X8DTU-6+, Supermicro X8DTL,
 Supermicro X8DTL-3F, Supermicro X8SIL-F, Supermicro X9SCL, Supermicro
 X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE, Supermicro X9SCA-F-O,
-Supermicro H8DGU-F.
+Supermicro H8DGU-F, Supermicro X9DRi-F.
 .SH "EXAMPLES"
 .B # ipmi-sel 
 .PP
